--- a/Mylogin.html
+++ b/Mylogin.html
@@ -43,7 +43,7 @@
         <div class="apps">
             <p>Get the app.</p>
             <div class="icon">
-                <a href="#" ><img class="ios" src="ios_icon.png" alt=""></a>
+                <a href="#" ><img class="ios" src="app_store.png" alt=""></a>
                 <a href="#" ><img class="play" src="playstore_icon.png" alt=""></a>
             </div>
         </div>
